--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "apriltag-src"]
 	path = apriltag-sys/apriltag-src
-	url = https://github.com/AprilRobotics/apriltag
+	url = https://github.com/ryancwicks-voyis/apriltag
+	branch = ryan/add_black_borders
